--- a/lmao.htm
+++ b/lmao.htm
@@ -1,74 +1,60 @@
-<html><head><script async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript" id="analytics" async="" src="https://cdn.jsdelivr.net/gh/st39/sdk@main/ga.js"></script><script type="text/javascript" async="" src="https://imasdk.googleapis.com/js/sdkloader/ima3.js"></script><script id="gamemonetize-sdk" src="https://cdn.jsdelivr.net/gh/st39/sdk@main/sdkjs.js"></script><script src="//www.google.com/jsapi"></script><script>window.parent.maeExportApis_();</script><style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Fullscreen SWF</title>
+
+<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
+
+<style>
   html, body {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
+    background: transparent; /* Remove black background */
+  }
+
+  #container {
     width: 100%;
     height: 100%;
   }
 
-  #container {
-    margin: 0;
-    padding: 0;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  canvas {
+  ruffle-player {
+    width: 100%;
+    height: 100%;
     display: block;
   }
 </style>
-<script src="https://cdn.jsdelivr.net/gh/st39/sdk@main/api.js"></script>
-<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
+</head>
+<body>
+<div id="container"></div>
+
 <script>
-window.RufflePlayer = window.RufflePlayer || {};
-window.RufflePlayer.config = {
-"autoplay": "off",
-"polyfills": true,
-"letterbox": "on",
-"backgroundColor": null,
-"scale": "showAll",
-"allowFullscreen": true,
-"forceScale": true,
-"forceAlign": true,
-"splashScreen": true,
-"wmode": "Window",
-"unmuteOverlay": "hidden",
-"quality": "high" };
-window.addEventListener("load", (event) => {
-const ruffle = window.RufflePlayer.newest();
-const player = ruffle.createPlayer();
-const container = document.getElementById("container");
-container.appendChild(player);
-player.load("https://cdn.jsdelivr.net/gh/NWylynko/potatos@7ca279435083c6d51ad912731736f8a51440ec1c/swf/one-on-one-hockey.swf");
-player.style.width = "100%";
-player.style.height = "100%";
-});
+  window.RufflePlayer = window.RufflePlayer || {};
+  window.RufflePlayer.config = {
+    autoplay: "off",
+    polyfills: true,
+    letterbox: "off",
+    backgroundColor: null,  // Transparent background
+    scale: "exactFit",       // Fill entire container
+    allowFullscreen: true,
+    forceScale: true,
+    forceAlign: true,
+    splashScreen: true,
+    wmode: "window",
+    unmuteOverlay: "hidden",
+    quality: "high"
+  };
+
+  window.addEventListener("load", () => {
+    const ruffle = window.RufflePlayer.newest();
+    const player = ruffle.createPlayer();
+    document.getElementById("container").appendChild(player);
+    player.load("https://cdn.jsdelivr.net/gh/NWylynko/potatos@7ca279435083c6d51ad912731736f8a51440ec1c/swf/one-on-one-hockey.swf");
+  });
 </script>
-<style type="text/css">#button {
-  display:none;
-}
-.imgb_vis {
-  animation: imgb-animation 7s linear;
-}
-@keyframes imgb-animation {
-  10% {
-    transform: translateX(0);
-  }
-  20% {
-    transform: translateX(100px);
-  }
-  90% {
-    transform: translateX(100px);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}</style></head><body><div id="container">
-<ruffle-player style="width: 100%; height: 100%;"></ruffle-player></div>
-
-
-<script type="text/javascript">window.SDK_OPTIONS={gameId:"r2tzpy9cgrn2u4xgzc9z0zbtvxm16mby",onEvent:function(a){switch(a.name){case"SDK_GAME_PAUSE":break;case"SDK_GAME_START":break;case"SDK_READY":break}}};(function(a,b,c){var d=a.getElementsByTagName(b)[0];a.getElementById(c)||(a=a.createElement(b),a.id=c,a.src="https://cdn.jsdelivr.net/gh/st39/sdk@main/sdkjs.js",d.parentNode.insertBefore(a,d))})(document,"script","gamemonetize-sdk");</script><script type="text/javascript">let isAdShown=false;function onClick(e){if(!isAdShown&&typeof sdk!=='undefined'&&typeof sdk.showBanner==='function'){sdk.showBanner();isAdShown=true}window.removeEventListener("click",onClick)}window.addEventListener("click",onClick);</script><div id="button" class="imgb imgb_vis" style="position: fixed; top: 10%; left: -100px; z-index: 10; display: none;"><a target="_blank" href="https://sites.google.com/view/classroom6x/" title="More Unblocked Games 6x"><img src="https://lh4.googleusercontent.com/lUEWrXMVEr4AdjKISyJahDRJ61bwfvHdpeYm86Djn5U8oCm9dI60NGXSBqad9HUvzTXgqlkosA_hWV-VuXPjzrkGvh3_kNSgYk8ySWzXnDpbBCBiooyBbU8oBy3YBZMDkW8RcRVmDuC0raoeqZBm8kBlqs6c5mdfkJeN2aE68lXS_lcOZ5_F7lIuM6qLVg" width="100" height="30" style="cursor:pointer;" alt="More of best Classroom 6x Unblocked Games"></a></div><div id="imaContainer" style="position: absolute; z-index: 10000; top: 0px; left: 0px; width: 100%; height: 100%; background-color: rgb(0, 0, 0); visibility: hidden; overflow: hidden;"><video id="imaVideo"></video></div><div id="imaContainer_new" style="position: absolute; z-index: 10000; top: 0px; left: 0px; width: 100%; height: 100%; background-color: rgb(0, 0, 0); visibility: hidden; overflow: hidden;"><video2 id="imaVideo2"></video2></div></body></html>
+</body>
+</html>
